# INF515-PointsCloudsSegmentation

./: README.md
BilateralNN/: CMakeLists.txt  LatticeFilterKernel.cc  LatticeFilterKernel.cpp  LatticeFilterKernel.h  PermutohedralLattice.h  command_line.txt  main.py
pymutohedral_lattice/: main.py  permutohedral_lattice.py
